data/all_generated_tests/raw_wast_tests/loop_StackCorruption_339.wast
;; 10. **Test 10**:    - **Description**: Implement a loop that invokes a function with varying argument counts across iterations, manipulating stack values dynamically.    - **Constraint**: Dynamic handling of function arguments and stack state changes within loops.    - **Stack Corruption Check**: Confirm no stack corruption occurs due to varying argument handling across loop iterations.

(assert_invalid
  (module
    (func $varying-args (param i32) (result i32)
      (local i32)
      (loop (result i32)
        local.get 0
        i32.const 1
        i32.add
        local.set 1
        (call $function (local.get 0) (local.get 1))
        br_if 0 (i32.const 1)
      )
    )
    (func $function (param i32 i32) (result i32)
      ;; Function body can be assumed
    )
  )
  "type mismatch"
)